--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         font-family: 'Nunito', sans-serif;
       }
     </style>
-
-</head>
+  </head>
   <body class="bg-slate-50 text-slate-900 antialiased selection:bg-indigo-200 selection:text-indigo-900">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
